fix(action): add ProjectV2Field in GraphQL query

--- a/action.yaml
+++ b/action.yaml
@@ -39,6 +39,10 @@ runs:
                   id
                   fields(first: 20) {
                     nodes {
+                      ... on ProjectV2Field {
+                        id
+                        name
+                      }
                       ... on ProjectV2SingleSelectField {
                         id
                         name
